# GIP-19-20

./: .clang-format  .gitignore  02.01.cpp  02.02.cpp  02.03.cpp  02.04.cpp  02.05.cpp  03.01.cpp  03.02.cpp  03.03.cpp  04.01.cpp  04.02.cpp  04.03.cpp  05.01.cpp  05.02.cpp  05.03.cpp  06.01.cpp  06.02.cpp  06.03.cpp  07.cpp  08.01.cpp  08.02.cpp  09.cpp  10.01.cpp  10.02.cpp  11.02.cpp  CImgGIP05.h  CMakeLists.txt  GIP-19-20.files  README.md  files.sh  make.sh  person.cpp  person.h  texte.cpp  texte.h  wortspiegel.cpp  wortspiegel.h
08_files/: personendaten.txt  webseite.html  webseite.html.tmpl
10/: binaerer_suchbaum.cpp  binaerer_suchbaum.h
10.02.dir/: catch.h  suchen.cpp  suchen.h  unit_tests.cpp
11/: Makefile  main.cpp
11/01/: Makefile  main  sort.cpp  sort.h
12/: 12.01_and_02.cpp  MyRectangle.cpp  MyRectangle.h
12/03/: CImgGIP05Mock.h  MyRectangle.cpp  MyRectangle.h  collision_test.cpp  main.cpp
13/: main.cpp  unit_tests_append.cpp  unit_tests_charlistenknoten.cpp  unit_tests_delete_all.cpp  unit_tests_mystring2_1.cpp  unit_tests_mystring2_3.cpp
13/01/: MyFilledRectangle.cpp  MyFilledRectangle.h  MyRectangle.cpp  MyRectangle.h  main.cpp
13/02/: CharListenKnoten.h  MyString2.cpp  MyString2.h  catch.h  unit_tests_deep_copy.cpp  unit_tests_mystring2_2.cpp
offline/: 01.01.cpp  02.01.cpp  02.02.cpp  03.01.cpp  03.02.cpp  04.05.cpp  04.10.cpp  04.12.cpp  05.05.cpp  05.09.cpp  06.01.cpp  06.03.cpp  07.01.cpp  07.05.cpp  08.03.cpp
