project(02.01)
add_executable(02.01 02.01.cpp)

project(02.02)
add_executable(02.02 02.02.cpp)

project(02.03)
add_executable(02.03 02.03.cpp)

project(02.04)
add_executable(02.04 02.04.cpp)

project(02.04)
add_executable(02.04 02.04.cpp)

project(02.05)
add_executable(02.05 02.05.cpp)

project(03.01)
add_executable(03.01 03.01.cpp)

project(03.02)
add_executable(03.02 03.02.cpp)

project(03.03)
add_executable(03.03 03.03.cpp)

project(04.01)
add_executable(04.01 04.01.cpp)

project(04.02)
add_executable(04.02 04.02.cpp)

project(04.03)
add_executable(04.03 04.03.cpp)
