cmake_minimum_required(VERSION 3.0)

set(CMAKE_CXX_STANDARD 17)

project(02.01)
add_executable(02.01 02.01.cpp)

project(02.02)
add_executable(02.02 02.02.cpp)

project(02.03)
add_executable(02.03 02.03.cpp)

project(02.04)
add_executable(02.04 02.04.cpp)

project(02.05)
add_executable(02.05 02.05.cpp)

project(03.01)
add_executable(03.01 03.01.cpp)

project(03.02)
add_executable(03.02 03.02.cpp)

project(03.03)
add_executable(03.03 03.03.cpp)

project(04.01)
add_executable(04.01 04.01.cpp)

project(04.02)
add_executable(04.02 04.02.cpp)

project(04.03)
add_executable(04.03 04.03.cpp)

project(05.01)
add_executable(05.01 05.01.cpp)

project(05.02)
add_executable(05.02 05.02.cpp)

project(05.03)
add_executable(05.03 05.03.cpp)

project(06.01)
add_executable(06.01 06.01.cpp wortspiegel.cpp)

project(06.02)
add_executable(06.02 06.02.cpp)

#project(06.03)
#add_executable(06.03 06.03.cpp)
#target_link_libraries(06.03 X11 pthread)

project(07)
add_executable(07 07.cpp)

# offline

project(o.01.01)
add_executable(o.01.01 offline/01.01.cpp)

project(o.02.01)
add_executable(o.02.01 offline/02.01.cpp)

project(o.02.02)
add_executable(o.02.02 offline/02.02.cpp)

project(o.03.01)
add_executable(o.03.01 offline/03.01.cpp)

project(o.03.02)
add_executable(o.03.02 offline/03.02.cpp)

project(o.04.05)
add_executable(o.04.05 offline/04.05.cpp)

project(o.04.10)
add_executable(o.04.10 offline/04.10.cpp)

project(o.04.12)
add_executable(o.04.12 offline/04.12.cpp)

project(o.05.05)
add_executable(o.05.05 offline/05.05.cpp)

project(o.05.09)
add_executable(o.05.09 offline/05.09.cpp)
